# DiffCSP-offical

./: .gitignore  README.md  pyproject.toml
diffcsp/: __init__.py  run.py
diffcsp/common/: data_utils.py  utils.py
diffcsp/pl_data/: datamodule.py  dataset.py
diffcsp/pl_modules/: gnn.py  model.py
diffcsp/scripts/: compute_metrics.py  eval_utils.py  evaluate.py  generation.py  sample.py
